# multbot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: balatrobot-api.md  balatrollm-reference.md
src/multbot/: __main__.py  bot.py  client.py  collector.py  prompt.py  state.py  tools.py
tests/: conftest.py  test_collector.py  test_state.py  test_tools.py
