[project]
name = "multbot"
version = "0.1.0"
description = "LLM-powered Balatro bot for BalatroBench"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
multbot = "multbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
